--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-    "name": "laravel/framework",
+    "name": "carboncube/laravel-framework",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "homepage": "http://laravel.com",
     "support": {
