--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "carboncube/laravel-framework",
+    "name": "laravel/framework",
     "description": "The Laravel Framework.",
     "keywords": [
         "framework",
